refactor: removed use of deprecated java APIs