@@ -65,7 +65,7 @@ public class OrientGraphExecuteFunctionGraphFactoryTest extends AbstractRemoteGr
 
     Assert.assertEquals(true, gremlin.hasNext());
     Object result = gremlin.next();
-    Assert.assertEquals(new Long(2), result);
+    Assert.assertEquals(Long.valueOf(2), result);
   }
 
   // Still Not supported
