@@ -19,38 +19,38 @@ public class OrientGraphQueryTest extends AbstractRemoteGraphFactoryTest {
 
     // Count on V
     Long count = graph.traversal().V().count().toList().get(0);
-    Assert.assertEquals(new Long(4), count);
+    Assert.assertEquals(Long.valueOf(4), count);
 
     count = graph.traversal().V().hasLabel("Person").count().toList().get(0);
-    Assert.assertEquals(new Long(2), count);
+    Assert.assertEquals(Long.valueOf(2), count);
 
     count = graph.traversal().V().hasLabel("Animal").count().toList().get(0);
-    Assert.assertEquals(new Long(2), count);
+    Assert.assertEquals(Long.valueOf(2), count);
 
     count = graph.traversal().V().hasLabel("Animal", "Person").count().toList().get(0);
-    Assert.assertEquals(new Long(4), count);
+    Assert.assertEquals(Long.valueOf(4), count);
 
     // Count on E
 
     count = graph.traversal().E().count().toList().get(0);
-    Assert.assertEquals(new Long(3), count);
+    Assert.assertEquals(Long.valueOf(3), count);
 
     count = graph.traversal().E().hasLabel("HasFriend").count().toList().get(0);
-    Assert.assertEquals(new Long(1), count);
+    Assert.assertEquals(Long.valueOf(1), count);
 
     count = graph.traversal().E().hasLabel("HasAnimal").count().toList().get(0);
-    Assert.assertEquals(new Long(2), count);
+    Assert.assertEquals(Long.valueOf(2), count);
 
     count = graph.traversal().E().hasLabel("HasAnimal", "HasFriend").count().toList().get(0);
-    Assert.assertEquals(new Long(3), count);
+    Assert.assertEquals(Long.valueOf(3), count);
 
     // Inverted Count
 
     count = graph.traversal().V().hasLabel("HasFriend").count().toList().get(0);
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     count = graph.traversal().E().hasLabel("Person").count().toList().get(0);
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     // More Complex Count
 
@@ -63,29 +63,29 @@ public class OrientGraphQueryTest extends AbstractRemoteGraphFactoryTest {
             .count()
             .toList()
             .get(0);
-    Assert.assertEquals(new Long(2), count);
+    Assert.assertEquals(Long.valueOf(2), count);
 
     // With Polymorphism
 
     count = graph.traversal().V().has("Person", "name", "Jon").out("E").count().toList().get(0);
-    Assert.assertEquals(new Long(2), count);
+    Assert.assertEquals(Long.valueOf(2), count);
 
     // With Base Class V/E
 
     count = graph.traversal().V().has("name", "Jon").count().toList().get(0);
-    Assert.assertEquals(new Long(1), count);
+    Assert.assertEquals(Long.valueOf(1), count);
 
     count = graph.traversal().E().has("name", "Jon").count().toList().get(0);
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     count = graph.traversal().V().has("name", "Jon").out("E").count().toList().get(0);
-    Assert.assertEquals(new Long(2), count);
+    Assert.assertEquals(Long.valueOf(2), count);
 
     count = graph.traversal().E().has("marker", 10).count().toList().get(0);
-    Assert.assertEquals(new Long(1), count);
+    Assert.assertEquals(Long.valueOf(1), count);
 
     count = graph.traversal().V().has("marker", 10).count().toList().get(0);
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
   }
 
   @Test
@@ -96,19 +96,19 @@ public class OrientGraphQueryTest extends AbstractRemoteGraphFactoryTest {
     // Count on V
     Long count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     graph.addVertex("name", "Jon");
 
     count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(1), count);
+    Assert.assertEquals(Long.valueOf(1), count);
 
     graph.tx().rollback();
 
     count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     graph.close();
   }
@@ -121,18 +121,18 @@ public class OrientGraphQueryTest extends AbstractRemoteGraphFactoryTest {
     // Count on V
     Long count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     graph.addVertex("identifier", 1);
 
     count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(1), count);
+    Assert.assertEquals(Long.valueOf(1), count);
 
     graph.tx().commit();
 
     count = graph.traversal().V().has("~identifier", 1).count().toList().get(0);
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     graph.close();
   }
@@ -148,13 +148,13 @@ public class OrientGraphQueryTest extends AbstractRemoteGraphFactoryTest {
 
       Integer count = graph.traversal().V().hasLabel("Wrong").toList().size();
 
-      Assert.assertEquals(new Integer(0), count);
+      Assert.assertEquals(Integer.valueOf(0), count);
 
       // Count on Person + Wrong Class
 
       count = graph.traversal().V().hasLabel("Person", "Wrong").toList().size();
 
-      Assert.assertEquals(new Integer(2), count);
+      Assert.assertEquals(Integer.valueOf(2), count);
     } finally {
       graph.close();
     }
@@ -195,19 +195,19 @@ public class OrientGraphQueryTest extends AbstractRemoteGraphFactoryTest {
     // Count on V
     Long count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(0), count);
+    Assert.assertEquals(Long.valueOf(0), count);
 
     graph.addVertex("name", "Jon");
 
     count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(1), count);
+    Assert.assertEquals(Long.valueOf(1), count);
 
     graph.tx().commit();
 
     count = graph.traversal().V().count().toList().get(0);
 
-    Assert.assertEquals(new Long(1), count);
+    Assert.assertEquals(Long.valueOf(1), count);
 
     graph.close();
   }
